// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion Component matches snapshot (initially closed) 1`] = `
<View
  testID="accordion"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#EEE",
        "borderRadius": 6,
        "marginVertical": 8,
        "opacity": 1,
        "padding": 12,
      }
    }
    testID="accordion-toggle"
  >
    <Text
      style={
        {
          "fontSize": 16,
          "fontWeight": "bold",
        }
      }
    >
      Sample Accordion
    </Text>
  </View>
</View>
`;

exports[`Accordion Component matches snapshot after opening content 1`] = `
<View
  testID="accordion"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#EEE",
        "borderRadius": 6,
        "marginVertical": 8,
        "opacity": 1,
        "padding": 12,
      }
    }
    testID="accordion-toggle"
  >
    <Text
      style={
        {
          "fontSize": 16,
          "fontWeight": "bold",
        }
      }
    >
      Sample Accordion
    </Text>
  </View>
  <View
    testID="accordion-content"
  >
    <Text
      style={
        {
          "backgroundColor": "#F5F5F5",
          "borderRadius": 6,
          "fontSize": 14,
          "padding": 12,
        }
      }
    >
      This is hidden content.
    </Text>
  </View>
</View>
`;

exports[`Accordion Component matches snapshot after toggling open and closed 1`] = `
<View
  testID="accordion"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#EEE",
        "borderRadius": 6,
        "marginVertical": 8,
        "opacity": 1,
        "padding": 12,
      }
    }
    testID="accordion-toggle"
  >
    <Text
      style={
        {
          "fontSize": 16,
          "fontWeight": "bold",
        }
      }
    >
      Sample Accordion
    </Text>
  </View>
</View>
`;
